third_party/blink/renderer/core/page/autoscroll_controller.h
@@ -118,6 +118,8 @@ class CORE_EXPORT AutoscrollController final
 
   FRIEND_TEST_ALL_PREFIXES(AutoscrollControllerTest,
                            CrashWhenLayoutStopAnimationBeforeScheduleAnimation);
+  FRIEND_TEST_ALL_PREFIXES(AutoscrollControllerTest,
+                           ContinueAutoscrollAfterMouseLeaveEvent);
 };
 
 }  // namespace blink
